kubernetes/apps/production/arr/qbitty/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbitty
  namespace: arr
  labels:
    app: qbitty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbitty
  template:
    metadata:
      labels:
        app: qbitty
    spec:
      containers:
        - name: qbitty
          image: ghcr.io/hotio/qbittorrent@sha256:3c32e5d21f5e83558a71767dfdf7f39fe5379548829be4723270cda61f08fd56
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "5000m"
          volumeMounts:
            - mountPath: /config
              name: qbitty-conf
            - mountPath: /data
              name: nas
            - mountPath: /config/wireguard/
              name: wireguard-config
            - mountPath: /incomplete
              name: qbitty-incomplete
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          ports:
            - containerPort: 8080
              name: webui
              protocol: TCP
      volumes:
        - name: nas
          nfs:
            path: /mnt/thePool/thePoolShare
            server: 10.0.0.10
        - name: qbitty-conf
          persistentVolumeClaim:
            claimName: qbitty-conf
        - name: wireguard-config
          secret:
            secretName: qbitty-wireguard
        - name: qbitty-incomplete
          emptyDir:
            sizeLimit: 100Gi
