kubernetes/apps/production/arr/qbitty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbitty
  namespace: arr
spec:
  selector:
    app: qbitty
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
